# sorry

./: .gitignore  .gitmodules  README.md  TODO.md  sorry.js
client/: README.md  angular.json  package-lock.json  package.json
client/public/: index.html
client/src/: App.js  data.js
client/src/app/: app.component.html  app.component.ts  app.module.ts
client/src/component/: listItem.css  listItem.js
client/src/page/: detail.css  detail.js  list.js
errorreport/: sorry.backup.js  sorry.d.ts
package/report/: .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
package/report/example/: main.html
package/report/src/: history.ts  index.ts  sorry.d.ts  util.ts
server/: CMakeLists.txt  CMakeSettings.json  README.md  err.txt  main.cpp  package-lock.json  package.json  pom.xml  test.sh
server/debug/: CMakeCache.txt  Makefile  cmake_install.cmake
server/lib/: main.cpp  router.cpp  service.cpp  util.cpp
server/lib/log/: file.cpp  mongo.cpp
server/lib/user/: register.cpp
server/sorry/: router.hpp  service.hpp  util.hpp
server/sorry/log/: file.hpp  log.hpp  mongo.hpp
server/sorry/user/: register.hpp
server/source/: main.cpp  router.cpp  router.hpp  service.cpp  service.hpp  setting.cpp  setting.hpp  util.cpp  util.hpp
server/source/log/: file.hpp  log.hpp  mongo.hpp
server/source/user/: register.hpp
server/src/: app.module.ts
server/src/main/kotlin/chegde/sorry/server/: ServerApplication.kt
server/src/main/kotlin/chegde/sorry/server/JavascriptMsg/: JavascriptMsg.kt  MsgErrorType.kt  Response.kt  Store.kt
server/src/main/kotlin/chegde/sorry/server/config/: CROSConfig.kt  MongoConfig.kt
server/src/main/kotlin/chegde/sorry/server/controller/: AnalyseController.kt  ReportController.kt
server/src/main/kotlin/chegde/sorry/server/util/: DirUtil.kt
server/src/main/resources/: application.properties
server/src/sorry/: log.module.ts  log.service.ts
server/src/sorry/schemas/: log.schema.ts
server/src/test/kotlin/chegde/sorry/server/: ServerApplicationTests.kt
server/test/source/: main.cpp  test.cpp
server/train/: CMakeLists.txt  crow.h  lambda.c1  main.cpp
src/: sorry.ts  util.ts
test/: index.html  stacktrace.js  test.js
